made navbar responsive + fixed overflow

--- a/educlips-frontend/src/index.css
+++ b/educlips-frontend/src/index.css
@@ -1,5 +1,11 @@
-body {
+*{
+  box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f4f6f8;
 }
